# samtay.github.io

./: .gitignore  .gitmodules  404.html  Gemfile  README.md  _config.yml  about.html  atom.xml  circle.yml  feed.xml  index.html  package.json  redirects.json  robots.txt  samtay-github-io.cabal  site.hs  sitemap.xml  stack.yaml  tags.html  utterances.json
.circleci/: config.yml  deploy.sh
_drafts/: 2020-12-18-verifiable-elections.md  2021-05-21-road-trip-planner.md  pgm-intro.md  refactoring-adventures.md  solar.md  trail-log.md
_includes/: footer.html  head.html  navigation.html
_layouts/: post.html
_my_tags/: automata.md  crypto.md  datalog.md  haskell.md  pgm.md  probability.md  rust.md  tui.md
_posts/: 2017-03-17-comonadic-game-of-life.md  2017-06-29-introduction-to-brick.md  2019-03-11-deriving-via-use-case.md  2019-03-11-deriving-via.md  2020-02-16-graphical-models-intro.md  2020-02-16-pgm-intro.md  2020-05-30-refactoring-adventures.md  2020-07-03-first-foray-into-rust.md  2020-12-18-verifiable-elections.md  2021-06-05-road-trip-planner.md
articles/: brick.html  brick.md  comonadic-game-of-life.html  comonadic-game-of-life.md  deriving-via.html  deriving-via.md
assets/: .sprockets-manifest-055cf0a1bf83a59e0d1e19d4820f198a.json  .sprockets-manifest-0a089e28d79012202957a7a8ed6c919c.json  .sprockets-manifest-1039e05cb107d59bd2671cd252ef0e16.json  .sprockets-manifest-1631ef67ea3705a079e3de4c6592ee4c.json  .sprockets-manifest-185d21adb1f33a194076ea79bcaf79d8.json  .sprockets-manifest-1b19e96003f4b659ed8347dbe74954cb.json  (+85 more)
css/: hyde.css  main.css  poole.css  (+1 more)
(+44 files in other folders)
